# Polymarket_Trader

./: .env.example  .gitignore  README.md  docker-compose.yml  run_backtest.py
apps/api/: pyproject.toml
apps/api/src/polymarket_trader/: bootstrap.py  main.py  replay.py
apps/api/src/polymarket_trader/adapters/: mock_polymarket.py
apps/api/src/polymarket_trader/api/: routes.py
apps/api/src/polymarket_trader/db/: __init__.py  models.py
apps/api/src/polymarket_trader/domain/: __init__.py  schemas.py
apps/api/src/polymarket_trader/services/: __init__.py  state.py
apps/api/src/polymarket_trader/services/data_ingestion/: service.py
apps/api/src/polymarket_trader/services/historical_store/: service.py
apps/api/src/polymarket_trader/services/market_catalog/: service.py
apps/api/src/polymarket_trader/services/paper_trading/: service.py
apps/api/src/polymarket_trader/services/replay/: service.py
apps/api/tests/: test_market_catalog.py  test_replay.py
docs/: BACKTEST_FINDINGS.md  TODO.md  architecture.md  cvd_enhanced_strategy_plan.md  cvd_implementation_status.md
infrastructure/: docker-compose.yml
scripts/: check-health.ps1  check-health.sh  dev-down.ps1  dev-down.sh  dev-up.ps1  dev-up.sh  download_hyperliquid_btc_ticks.py  optimize_btc_strategy.py  run-csv-backtest.ps1  run-csv-backtest.sh  run-real-observation.ps1  run-real-observation.sh  seed_demo_data.py
services/: __init__.py  state.py
tests/: test_backtester.py  test_closed_market_evaluator.py  test_cvd.py  test_dashboard_summary.py  test_execution_engine.py  test_external_ingestor.py  (+14 more)
(+55 files in other folders)
