[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-trader-api"
version = "0.1.0"
description = "FastAPI backend for Polymarket research and trading"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "httpx>=0.28.0",
  "py-clob-client"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../.."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
